# SBGMarkService

./: .env.example  .env.staging.example  .gitignore  CLAUDE.md  README.md  docker-compose.staging.yml  docker-compose.yml  pom.xml
.github/workflows/: ci.yml  plugin-build.yml
deploy/windows-server/: install-startup-task.ps1  marking-server.env.example  start-server.ps1  status-server.ps1  stop-server.ps1  uninstall-startup-task.ps1
docs/: e2e-staging-cashier-checklist.md  github-set10-secret.md  km-import-excel.md  marking-management-api.md  project-status-2026-04-06.md  windows-server-192.168.80.31.md
docs/postman/: README.md  SBG-Marking-Auto-KM.postman_collection.json  SBG-Marking-Local.postman_environment.json
prompts/: plugin-prompt.md  server-prompt.md
sbg-km-replacement-plugin/: pom.xml
sbg-marking-contracts/: pom.xml
sbg-marking-server/: Dockerfile  pom.xml
sbg-marking-server-py/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  run.py
sbg-marking-server-py/app/: __init__.py  api.py  background.py  config.py  db.py  enums.py  models.py  schemas.py  service.py
sbg-marking-server-py/migrations/: env.py
sbg-marking-server-py/migrations/versions/: 20260416_0001_initial_schema.py  20260421_0002_external_scan_history.py  20260421_0003_substitution_mapping.py
sbg-marking-server-py/tests/: conftest.py  test_return_flow.py  test_sale_flow.py
sbg-set10-marking-plugin/: pom.xml
scripts/: encode-set10-jar.ps1  staging-down.ps1  staging-smoke.ps1  staging-up.ps1
(+118 files in other folders)
